--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ h1 {
 
 h2 {
     text-align: center;
-    margin-top: 4em;
-    font-size: 2em;
+    font-size: 1.7em;
 }
 
 #port {
@@ -31,7 +30,6 @@ h2 {
 }
 
 .projs {
-    margin-top: 5em;
     text-align: center;
 }
 
@@ -42,5 +40,30 @@ h2 {
 }
 
 .projeto_image {
-    border-radius: 1%;
+    border-radius: 10px;
+}
+
+.badges {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0.8em;
+}
+
+.badge {
+    border-radius: 5px;
+    margin-left: 0.5em;
+}
+
+.projetos {
+    margin-top: 10em;
+}
+
+.link_proj {
+    display: flex;
+    justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
