--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "Nunito", sans-serif;
-    background-color: rgb(19, 19, 19);;
+    background-color: rgb(19, 19, 19);
     color: white;
 }
 
@@ -63,7 +63,7 @@ h2 {
 }
 
 .projetos {
-    margin-top: 10em;
+    margin-top: 4em;
 }
 
 .link_proj {
@@ -96,4 +96,43 @@ a {
 .linkedin {
     transform: scale(88%);
     margin-top: -2.5em;
+}
+
+.contate {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 3em auto;
+    max-width: max-content;
+}
+
+.botao {
+    background-color: rgb(166, 166, 166);
+    color: rgb(19, 19, 19);
+    border: none;
+    padding: 15px 26px;
+    text-align: center;
+    text-decoration: none;
+    margin: auto;
+    display: inline-block;
+    font-size: 18px;
+    border-radius: 8px;
+    cursor: pointer;
+    border: 1% solid red;
+    display: flex;
+    justify-content: center;
+}
+
+.botao:hover {
+    background-color: #444;
+}
+
+.imgbutao {
+    margin-right: 0.4em;
+}
+
+.gradiente {
+    background: linear-gradient(to bottom right, #000000, #ffffff);
+    width: 100%;
+    height: 100%;
 }
