--- a/style.css
+++ b/style.css
@@ -136,3 +136,21 @@ a {
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 1400px) {
+    .proj2
+    ,.proj1 {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .SaleSync {
+        margin: auto;
+    }
+}
+
+@media (max-width: 510px) {
+    .projeto_image {
+        width: 100%;
+    }
+}
