--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ h2 {
 
 .projs {
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: block;
 }
 
 .SaleSync {
@@ -150,7 +153,27 @@ a {
 }
 
 @media (max-width: 510px) {
-    .projeto_image {
+    .projs {
         width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+    .projeto_image{
+        max-width: 100%; /* Define a largura máxima da imagem como 100% do contêiner pai */
+        height: auto;
+    }
+
+    .badges {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    h1 {
+        font-size: 2em;
+        margin-bottom: 2em;
+    }
+
+    #port {
+        display: none;
     }
 }
